添加注册中心

--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,48 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.me</groupId>
-  <artifactId>databi</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>数据分析平台</name>
-  <description>数据分析平台：数据建模；数据治理；数据报表；数据查询接口；权限管理</description>
-  <modules>
-  	<module>databi-dataAccess</module>
-  	<module>databi-upms</module>
-  	<module>databi-config</module>
-  	<module>databi-eureka</module>
-  	<module>databi-gateway</module>
-  	<module>databi-common</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.me</groupId>
+	<artifactId>databi</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<name>数据分析平台</name>
+	<description>数据分析平台：数据建模；数据治理；数据报表；数据查询接口；权限管理</description>
+	<modules>
+		<module>databi-dataAccess</module>
+		<module>databi-upms</module>
+		<module>databi-config</module>
+		<module>databi-eureka</module>
+		<module>databi-gateway</module>
+		<module>databi-common</module>
+	</modules>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+	<!-- 设置公共依赖 -->
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.13.RELEASE</version>
+	</parent>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Edgware.SR3</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
