--- a/databi-eureka/pom.xml
+++ b/databi-eureka/pom.xml
@@ -7,4 +7,10 @@
   </parent>
   <artifactId>databi-eureka</artifactId>
   <name>服务注册发布</name>
+  <dependencies>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-eureka-server</artifactId>
+    </dependency> 
+  </dependencies>
 </project>
